[package]
name = "ptr_eq-macros"
version = "0.0.1"
authors = ["Shaoyuan Chen <chensy20@mails.tsinghua.edu.cn>"]
edition = "2018"
description = "[WIP] by-address comparisons and hashes in Rust."
license = "MIT"
repository = "https://github.com/wx-csy/ptr_eq"
documentation = "https://docs.rs/ptr_eq-macros/0.0.1"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"